--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,16 +12,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-12 Mon 13:50]
+#+CAPTION: Clock summary at [2016-12-12 Mon 15:07]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:33* |      |      | 100.0 |
+| *Total time*                                                                | *1:48* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:33   |      |      | 100.0 |
-| Active                                                                      |        | 0:33 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:17 |  51.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:16 |  48.5 |
+| Stories                                                                     | 1:48   |      |      | 100.0 |
+| Active                                                                      |        | 1:48 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:17 |  15.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:16 |  14.8 |
+| STARTED Add helper infrastructure to C#                                     |        |      | 1:15 |  69.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -57,7 +58,8 @@ For more details see the [sprint log](https://github.com/DomainDrivenConsulting/
 
 #+end_src
 
-*** Add helper infrastructure to C#                                   :story:
+*** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-12 Mon 13:51]--[2016-12-12 Mon 15:06] =>  1:15
 
 It is now clear we will need helpers:
 
