--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,17 +12,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-12 Mon 16:30]
+#+CAPTION: Clock summary at [2016-12-13 Tue 09:54]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:10* |      |      | 100.0 |
+| *Total time*                                                                | *4:39* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:10   |      |      | 100.0 |
-| Active                                                                      |        | 3:10 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |  12.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:16 |   8.4 |
-| STARTED Add helper infrastructure to C#                                     |        |      | 2:31 |  79.5 |
+| Stories                                                                     | 4:39   |      |      | 100.0 |
+| Active                                                                      |        | 4:39 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   8.2 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |  11.1 |
+| STARTED Add helper infrastructure to C#                                     |        |      | 3:45 |  80.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -149,6 +149,7 @@ Same on OSX:
 Emailed bintray for help.
 
 *** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-13 Tue 09:15]--[2016-12-13 Tue 09:54] =>  0:39
     CLOCK: [2016-12-12 Mon 16:31]--[2016-12-12 Mon 17:06] =>  0:35
     CLOCK: [2016-12-12 Mon 15:14]--[2016-12-12 Mon 16:30] =>  1:16
     CLOCK: [2016-12-12 Mon 13:51]--[2016-12-12 Mon 15:06] =>  1:15
