--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,17 +12,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-13 Tue 11:41]
+#+CAPTION: Clock summary at [2016-12-13 Tue 12:45]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:25* |      |      | 100.0 |
+| *Total time*                                                                | *6:49* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:25   |      |      | 100.0 |
-| Active                                                                      |        | 6:25 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   6.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   8.1 |
-| STARTED Add helper infrastructure to C#                                     |        |      | 5:31 |  86.0 |
+| Stories                                                                     | 6:49   |      |      | 100.0 |
+| Active                                                                      |        | 6:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   5.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   7.6 |
+| STARTED Add helper infrastructure to C#                                     |        |      | 5:55 |  86.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -149,6 +149,7 @@ Same on OSX:
 Emailed bintray for help.
 
 *** STARTED Add helper infrastructure to C#                           :story:
+    CLOCK: [2016-12-13 Tue 12:21]--[2016-12-13 Tue 12:45] =>  0:24
     CLOCK: [2016-12-13 Tue 10:51]--[2016-12-13 Tue 11:42] =>  0:51
     CLOCK: [2016-12-13 Tue 09:55]--[2016-12-13 Tue 10:50] =>  0:55
     CLOCK: [2016-12-13 Tue 09:15]--[2016-12-13 Tue 09:54] =>  0:39
