--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-13 Tue 13:19]
+#+CAPTION: Clock summary at [2016-12-13 Tue 13:40]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:22* |      |      | 100.0 |
+| *Total time*                                                                | *7:41* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:22   |      |      | 100.0 |
-| Active                                                                      |        | 7:22 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   5.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   7.0 |
-| COMPLETED Add helper infrastructure to C#                                   |        |      | 5:55 |  80.3 |
-| STARTED Add support for Equals in C#                                        |        |      | 0:33 |   7.5 |
+| Stories                                                                     | 7:41   |      |      | 100.0 |
+| Active                                                                      |        | 7:41 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   5.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   6.7 |
+| COMPLETED Add helper infrastructure to C#                                   |        |      | 5:55 |  77.0 |
+| STARTED Add support for Equals in C#                                        |        |      | 0:52 |  11.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -203,6 +203,7 @@ Patch:
 #+end_src
 
 *** STARTED Add support for Equals in C#                              :story:
+    CLOCK: [2016-12-13 Tue 13:20]--[2016-12-13 Tue 13:39] =>  0:19
     CLOCK: [2016-12-13 Tue 12:47]--[2016-12-13 Tue 13:19] =>  0:32
     CLOCK: [2016-12-13 Tue 12:46]--[2016-12-13 Tue 12:47] =>  0:01
 
