--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-13 Tue 14:00]
+#+CAPTION: Clock summary at [2016-12-13 Tue 14:13]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:01* |      |      | 100.0 |
+| *Total time*                                                                | *8:13* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:01   |      |      | 100.0 |
-| Active                                                                      |        | 8:01 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   4.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   6.4 |
-| COMPLETED Add helper infrastructure to C#                                   |        |      | 5:55 |  73.8 |
-| STARTED Add support for Equals in C#                                        |        |      | 1:12 |  15.0 |
+| Stories                                                                     | 8:13   |      |      | 100.0 |
+| Active                                                                      |        | 8:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:23 |   4.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:31 |   6.3 |
+| COMPLETED Add helper infrastructure to C#                                   |        |      | 5:55 |  72.0 |
+| COMPLETED Add support for Equals in C#                                      |        |      | 1:24 |  17.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -202,7 +202,9 @@ Patch:
 +        const auto& e(*formattable.element());
 #+end_src
 
-*** STARTED Add support for Equals in C#                              :story:
+*** COMPLETED Add support for Equals in C#                            :story:
+    CLOSED: [2016-12-13 Tue 14:13]
+    CLOCK: [2016-12-13 Tue 14:01]--[2016-12-13 Tue 14:13] =>  0:12
     CLOCK: [2016-12-13 Tue 13:40]--[2016-12-13 Tue 14:00] =>  0:20
     CLOCK: [2016-12-13 Tue 13:20]--[2016-12-13 Tue 13:39] =>  0:19
     CLOCK: [2016-12-13 Tue 12:47]--[2016-12-13 Tue 13:19] =>  0:32
