--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,20 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-14 Wed 10:24]
+#+CAPTION: Clock summary at [2016-12-14 Wed 10:29]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:51* |       |      | 100.0 |
+| *Total time*                                                                | *12:55* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:51   |       |      | 100.0 |
-| Active                                                                      |         | 12:51 |      | 100.0 |
+| Stories                                                                     | 12:55   |       |      | 100.0 |
+| Active                                                                      |         | 12:55 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:23 |   3.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:31 |   4.0 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       | 5:55 |  46.0 |
-| COMPLETED Add support for Equals in C#                                      |         |       | 1:24 |  10.9 |
-| STARTED Add io support in C#                                                |         |       | 3:17 |  25.6 |
-| STARTED Create a test model solution to validate C# code                    |         |       | 1:21 |  10.5 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       | 5:55 |  45.8 |
+| COMPLETED Add support for Equals in C#                                      |         |       | 1:24 |  10.8 |
+| STARTED Add io support in C#                                                |         |       | 3:17 |  25.4 |
+| STARTED Create a test model solution to validate C# code                    |         |       | 1:25 |  11.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -309,6 +309,7 @@ Code:
 #+end_src
 
 *** STARTED Create a test model solution to validate C# code          :story:
+    CLOCK: [2016-12-14 Wed 10:25]--[2016-12-14 Wed 10:29] =>  0:04
     CLOCK: [2016-12-14 Wed 10:19]--[2016-12-14 Wed 10:24] =>  0:05
     CLOCK: [2016-12-14 Wed 09:02]--[2016-12-14 Wed 10:18] =>  1:16
 
